--- a/index.html
+++ b/index.html
@@ -1479,10 +1479,11 @@ window.onbeforeunload = function() {
 // LOGIKA ADMIN HP ON/OFF (KONEKSI GOOGLE)
 // ==========================================
 
-// 1. FUNGSI KONEKSI (TETAP PERTAHANKAN ASYNC DAN PERSISTENCE)
+// 1. FUNGSI KONEKSI DENGAN PERSISTENCE LOCAL (KUNCI AWAL)
 async function koneksiAdmin() {
     const provider = new firebase.auth.GoogleAuthProvider();
     try {
+        // Memastikan browser HP tidak lupa identitas Tuan
         await firebase.auth().setPersistence(firebase.auth.Auth.Persistence.LOCAL);
         alert("JARVIS: MEMBUKA JALUR ENKRIPSI GOOGLE, TUAN...");
         firebase.auth().signInWithRedirect(provider);
@@ -1491,44 +1492,54 @@ async function koneksiAdmin() {
     }
 }
 
-// 2. RADAR STATUS DENGAN VALIDASI INSTAN
+// 2. RADAR STATUS DENGAN DOUBLE LOCK (FIREBASE + LOCALSTORAGE)
 function radarStatusAdmin() {
     const user = firebase.auth().currentUser;
     const btnHP = document.getElementById('btnKoneksi');
-    
-    if (user && user.email === "fajarilmanosaviar@gmail.com") {
+    // Membaca "Kunci Cadangan" dari memori permanen HP
+    const kunciCadangan = localStorage.getItem("statusAdminTuan");
+
+    if ((user && user.email === "fajarilmanosaviar@gmail.com") || kunciCadangan === "AKTIF") {
         if (btnHP && btnHP.innerHTML !== "✅ ADMIN HP ON 🔓") {
             btnHP.innerHTML = "✅ ADMIN HP ON 🔓";
             btnHP.style.backgroundColor = "#27ae60";
             btnHP.style.borderColor = "#1e8449";
+            btnHP.style.color = "white";
             btnHP.disabled = true;
-            console.log("Jarvis: Akses Admin HP Terdeteksi!");
+            
+            // Jika login berhasil terdeteksi, perkuat Kunci Cadangan
+            if (user && user.email === "fajarilmanosaviar@gmail.com") {
+                localStorage.setItem("statusAdminTuan", "AKTIF");
+            }
+            console.log("Jarvis: Akses Admin HP Terkunci Permanen.");
         }
     }
 }
 
-// 3. PENANGAN HASIL REDIRECT (DIPRIORITASKAN)
+// 3. PENJEMPUT HASIL REDIRECT (EKSEKUSI PASCA-LOGIN)
 firebase.auth().getRedirectResult().then((result) => {
     if (result && result.user) {
         if (result.user.email === "fajarilmanosaviar@gmail.com") {
+            // Menanamkan Kunci Cadangan segera setelah Google memberi izin
+            localStorage.setItem("statusAdminTuan", "AKTIF");
             alert("✅ VERIFIKASI BERHASIL! STATUS ADMIN HP SEKARANG: ON 🔓");
-            radarStatusAdmin(); // Jalankan radar seketika saat sukses
+            radarStatusAdmin();
         } else {
             alert("🛑 AKSES DITOLAK: EMAIL TIDAK DIKENALI!");
             firebase.auth().signOut();
+            localStorage.removeItem("statusAdminTuan");
         }
     }
 }).catch((error) => {
-    if (error.code === "auth/unauthorized-domain") {
-        alert("🛑 DOMAIN BELUM TERDAFTAR DI FIREBASE CONSOLE, TUAN!");
-    }
+    console.log("Jarvis: Menunggu instruksi Tuan.");
 });
 
-// 4. PENGAKTIF RADAR OTOMATIS
-setInterval(radarStatusAdmin, 1000); // Cek setiap detik (untuk menembus Welcome Screen)
+// Jalankan Radar setiap 1 detik (Menunggu Tuan melewati Welcome Screen)
+setInterval(radarStatusAdmin, 1000);
 
+// Pantau perubahan status secara alami
 firebase.auth().onAuthStateChanged((user) => {
-    radarStatusAdmin(); // Cek saat status auth berubah
+    radarStatusAdmin();
 });
 </script>
 <div id="modalPerangkat" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:9999; align-items:center; justify-content:center; padding:20px; box-sizing:border-box;">
@@ -1551,6 +1562,7 @@ firebase.auth().onAuthStateChanged((user) => {
 </div>
 </body>
 </html>
+
 
 
 
